--- a/angular.json
+++ b/angular.json
@@ -26,9 +26,15 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/chosen-js/chosen.css",
+               "node_modules/leaflet/dist/leaflet.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+  "node_modules/chosen-js/chosen.jquery.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -46,8 +52,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "5kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "90kb",
+                  "maximumError": "90kb"
                 }
               ],
               "outputHashing": "all"
@@ -101,9 +107,13 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+               "node_modules/leaflet/dist/leaflet.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           }
         }
       }
