--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "bootstrap": "^5.3.3",
+    "chosen-js": "^1.8.7",
+    "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -31,7 +34,12 @@
     "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "^16.2.16",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/google.maps": "^3.58.1",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.31",
+    "@types/leaflet": "^1.9.12",
+    "@types/select2": "^4.0.63",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
