--- a/angular.json
+++ b/angular.json
@@ -108,7 +108,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
-               "node_modules/leaflet/dist/leaflet.css"
+               "node_modules/leaflet/dist/leaflet.css",
+               "node_modules/ngx-toastr/toastr.css" 
 
             ],
             "scripts": [
