--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chosen-js": "^1.8.7",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ng-toast": "^2.0.0",
     "ngx-toastr": "^19.0.0",
     "tslib": "^2.3.0",
